# Source

./: CHANGELOG  LICENSE.txt  MANIFEST.in  README.md  pyproject.toml  setup.py
SOURCE/: create_probes_earth_map.py  duplicated_records_remover.py  find_variable_name.py  insitu_evaluation.py  pointwise_datasets_concatenator.py  ptmp_to_temp.py  real_time_concatenator.py  records_monotonicity_fixer.py  time_calc.py  time_check.py
SOURCE/model_postpro/: model_datasets_concatenator.py  model_postpro.py  vertical_interpolation.py
SOURCE/obs_postpro/: __init__.py  data_information_calc.py  depth_aggregator.py  depth_calc.py  insitu_tac_platforms_finder.py  insitu_tac_pre_processing.py  insitu_tac_timeseries_extractor.py  mean_variance_nc_variable.py  metadata_merger.py  obs_postpro.py  probes_names.csv  quality_check_applier.py  rejection_statistics.py  time_averager.py  time_from_index.py  time_series_post_processing.py  unique_values_nc_variable.py  url_countries.csv
docker/: Dockerfile_galaxy  Dockerfile_jupyter  Dockerfile_source  Dockerfile_source_test
notebooks/: SOURCE_processing_20230714.ipynb  download_CMEMS.py  test.txt  test_new_input_SOURCE.ipynb
scripts/: make_docker_galaxy.sh  make_docker_jupyter.sh  make_docker_source.sh  run_docker_galaxy.sh  run_docker_jupyter.sh  run_docker_source.sh
