[tool.poetry]
name = "source"
version = "0.1.0"
description = "SOURCE aims to manage jobs with in situ observations and model data from Ocean General Circulation Models (OGCMs)"
authors = ["Your Name <you@example.com>"]
license = "Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pykml = "^0.2.0"
lxml = "^4.9.2"
#shlex = "*"
#shutil = "*"
numpy= "^1.24.2"
pandas = "^1.5.3"
netCDF4 = "^1.6.3"
seawater = "^3.3.4"
scipy = "^1.10.1"
unidecode = "^1.3.6"
scikit-learn = "^1.2.2"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
